Fix bottom call causing horizontal scroll problems

--- a/app/assets/stylesheets/components/horizontal_call.css.scss
+++ b/app/assets/stylesheets/components/horizontal_call.css.scss
@@ -14,4 +14,10 @@
       margin-left: 0;
     }
   }
+
+  @media (max-width: $screen-sm-max) {
+    .btn-wrapper {
+      display: block;
+    }
+  }
 }
